--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <link rel="icon" type="image/svg+xml" sizes="any" href="/popcorn-favicon.svg?v=20260206b" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=20260206b" />
+    <link rel="shortcut icon" href="/favicon.ico?v=20260206b" />
     <title>Mind Test</title>
     <meta name="description" content="How strong is your mind? Take the test and share your results!" />
     <meta name="author" content="Mind Test" />
